force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <pluralLabel>Activities</pluralLabel>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Visit__c</fullName>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <required>true</required>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restrictedPicklist>true</restrictedPicklist>
            <valueSetDefinition>
                <value>
                    <fullName>OSA</fullName>
                </value>
                <value>
                    <fullName>PriceCheck</fullName>
                    <label>Price Check</label>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChecklistJSON__c</fullName>
        <label>Checklist JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResultJSON__c</fullName>
        <label>Result JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhotoIds__c</fullName>
        <label>Photo IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>