force-app/main/default/objects/Activity__c/fields/ChecklistJSON__c.field-meta.xml
<CustomField>
    <fullName>ChecklistJSON__c</fullName>
    <label>Checklist JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>