force-app/main/default/objects/Activity__c/fields/PhotoIds__c.field-meta.xml
<CustomField>
    <fullName>PhotoIds__c</fullName>
    <label>PhotoIds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>