force-app/main/default/objects/Activity__c/fields/ResultJSON__c.field-meta.xml
<CustomField>
    <fullName>ResultJSON__c</fullName>
    <label>ResultJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>