force-app/main/default/objects/Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>OSA</fullName>
                <default>False</default>
                <label>OSA</label>
            </value>
            <value>
                <fullName>PriceCheck</fullName>
                <default>False</default>
                <label>PriceCheck</label>
            </value>
            <value>
                <fullName>POSM</fullName>
                <default>False</default>
                <label>POSM</label>
            </value>
            <value>
                <fullName>Survey</fullName>
                <default>False</default>
                <label>Survey</label>
            </value>
            <value>
                <fullName>Collection</fullName>
                <default>False</default>
                <label>Collection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>