force-app/main/default/objects/Activity__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>